# magicSquareOfSquares

./: .env.example  .gitignore  CMakeLists.txt  Cargo.toml  Main.java  MostFrequentTotal.java  Square.java  app.py  filter_indices.h  generate_combinations.h  get_most_frequent_total.c  main.cpp  most_frequent_total.py  notes.txt  process_combinations.h  run.sh  setup.sh  sums_are_equal.h  times.txt
src/: FilterIndices.java  GenerateCombinations.java  GenerateSquareNumbers.java  GenerateUnfilteredIndices.java  Main.java  Maths.java  ProcessCombinations.java  Square.java  allocator.rs  combiner.rs  database.rs  generate_square_numbers.h  generate_unfiltered_indices.h  magic_square.rs  main.cpp  main.rs  maths.rs  run.rs  square.rs  sums_are_equal.rs
